Squashes project menu bug

--- a/scss/_project.scss
+++ b/scss/_project.scss
@@ -1,4 +1,4 @@
-#menu-project-menu {
+.project-nav .menu {
 	padding: 0;
 	margin: 0 auto;
 	display: inline-block;
